// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DepositBox should render correctly 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "white",
        "borderRadius": 10,
        "height": "auto",
        "padding": 10,
        "width": "100%",
      },
      {
        "elevation": 20,
        "shadowColor": "#161966",
        "shadowOffset": {
          "height": 6,
          "width": 0,
        },
        "shadowOpacity": 0.08,
        "shadowRadius": 16,
      },
      {
        "gap": 14,
        "padding": 21,
      },
    ]
  }
  testID="universal-container"
>
  <View
    style={
      {
        "alignItems": "flex-start",
        "flexDirection": "row",
        "gap": 7,
        "justifyContent": "flex-start",
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "#3EB290",
            "borderRadius": 44,
            "height": 22,
            "justifyContent": "center",
            "width": 22,
          },
          false,
        ]
      }
    >
      <SvgMock />
    </View>
    <View
      style={
        {
          "alignContent": "flex-start",
          "justifyContent": "flex-start",
          "marginTop": -6,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "flex-end",
            "flexDirection": "row",
          }
        }
      >
        <Text
          style={
            [
              {
                "color": "white",
                "fontFamily": "MulishRegular",
              },
              {
                "color": "#1B1D4D",
                "fontSize": 20,
              },
            ]
          }
        >
          3000
          .
        </Text>
        <View
          style={
            {
              "alignItems": "flex-end",
              "flexDirection": "row",
              "paddingBottom": 2,
            }
          }
        >
          <Text
            style={
              [
                {
                  "color": "white",
                  "fontFamily": "MulishRegular",
                },
                {
                  "color": "#1B1D4D",
                  "fontSize": 14,
                },
              ]
            }
          >
            00
          </Text>
          <Text
            style={
              [
                {
                  "color": "white",
                  "fontFamily": "MulishBold",
                },
                {
                  "color": "#1B1D4D",
                  "fontSize": 14,
                  "marginLeft": 4,
                },
              ]
            }
          >
            USD
          </Text>
        </View>
      </View>
      <Text
        style={
          [
            {
              "color": "white",
              "fontFamily": "MulishRegular",
            },
            {
              "color": "#4C4C60",
              "fontSize": 12,
            },
          ]
        }
      >
        1 wrz
         - 
        1 paź 2022
      </Text>
    </View>
    <View
      style={
        {
          "alignItems": "flex-end",
          "marginLeft": "auto",
          "marginTop": -6,
        }
      }
    >
      <Text
        style={
          [
            {
              "color": "white",
              "fontFamily": "MulishSemiBold",
            },
            {
              "color": "#1B1D4D",
              "fontSize": 16,
            },
          ]
        }
      >
        8
        %
      </Text>
      <Text
        style={
          [
            {
              "color": "white",
              "fontFamily": "MulishSemiBold",
            },
            {
              "color": "#3EB290",
              "fontSize": 12,
            },
          ]
        }
      >
        + 
        60,57
      </Text>
    </View>
  </View>
  <View
    style={
      {
        "flexDirection": "row",
        "gap": 8,
        "justifyContent": "space-between",
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={false}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "opacity": 1,
          "width": "50%",
        }
      }
    >
      <ViewManagerAdapter_ExpoLinearGradient
        proxiedProperties={
          {
            "colors": [
              4294937201,
              4294937201,
            ],
            "endPoint": [
              1,
              0.5,
            ],
            "locations": undefined,
            "startPoint": [
              0,
              0.5,
            ],
          }
        }
        style={
          [
            {
              "borderRadius": 10,
              "padding": 15,
            },
            {
              "padding": 8,
            },
            false,
          ]
        }
      >
        <Text
          style={
            [
              {
                "fontFamily": "MulishSemiBold",
                "fontSize": 16,
                "textAlign": "center",
              },
              false,
              false,
              [
                {
                  "fontSize": 12,
                },
                {
                  "color": "white",
                  "fontFamily": "MulishSemiBold",
                },
              ],
            ]
          }
        >
          Extend
        </Text>
      </ViewManagerAdapter_ExpoLinearGradient>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={false}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "opacity": 1,
          "width": "50%",
        }
      }
    >
      <ViewManagerAdapter_ExpoLinearGradient
        proxiedProperties={
          {
            "colors": [
              4282299024,
              4282299024,
            ],
            "endPoint": [
              1,
              0.5,
            ],
            "locations": undefined,
            "startPoint": [
              0,
              0.5,
            ],
          }
        }
        style={
          [
            {
              "borderRadius": 10,
              "padding": 15,
            },
            {
              "padding": 8,
            },
            false,
          ]
        }
      >
        <Text
          style={
            [
              {
                "fontFamily": "MulishSemiBold",
                "fontSize": 16,
                "textAlign": "center",
              },
              false,
              false,
              [
                {
                  "fontSize": 12,
                },
                {
                  "color": "white",
                  "fontFamily": "MulishSemiBold",
                },
              ],
            ]
          }
        >
          Withdrawal
        </Text>
      </ViewManagerAdapter_ExpoLinearGradient>
    </View>
  </View>
</View>
`;

exports[`DepositBox should render deposit icon and top-up button when not finished 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "white",
        "borderRadius": 10,
        "height": "auto",
        "padding": 10,
        "width": "100%",
      },
      {
        "elevation": 20,
        "shadowColor": "#161966",
        "shadowOffset": {
          "height": 6,
          "width": 0,
        },
        "shadowOpacity": 0.08,
        "shadowRadius": 16,
      },
      {
        "gap": 14,
        "padding": 21,
      },
    ]
  }
  testID="universal-container"
>
  <View
    style={
      {
        "alignItems": "flex-start",
        "flexDirection": "row",
        "gap": 7,
        "justifyContent": "flex-start",
      }
    }
  >
    <SvgMock />
    <View
      style={
        {
          "alignContent": "flex-start",
          "justifyContent": "flex-start",
          "marginTop": -6,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "flex-end",
            "flexDirection": "row",
          }
        }
      >
        <Text
          style={
            [
              {
                "color": "white",
                "fontFamily": "MulishRegular",
              },
              {
                "color": "#1B1D4D",
                "fontSize": 20,
              },
            ]
          }
        >
          3000
          .
        </Text>
        <View
          style={
            {
              "alignItems": "flex-end",
              "flexDirection": "row",
              "paddingBottom": 2,
            }
          }
        >
          <Text
            style={
              [
                {
                  "color": "white",
                  "fontFamily": "MulishRegular",
                },
                {
                  "color": "#1B1D4D",
                  "fontSize": 14,
                },
              ]
            }
          >
            00
          </Text>
          <Text
            style={
              [
                {
                  "color": "white",
                  "fontFamily": "MulishBold",
                },
                {
                  "color": "#1B1D4D",
                  "fontSize": 14,
                  "marginLeft": 4,
                },
              ]
            }
          >
            USD
          </Text>
        </View>
      </View>
      <Text
        style={
          [
            {
              "color": "white",
              "fontFamily": "MulishRegular",
            },
            {
              "color": "#4C4C60",
              "fontSize": 12,
            },
          ]
        }
      >
        1 wrz
         - 
        1 paź 2022
      </Text>
    </View>
    <View
      style={
        {
          "alignItems": "flex-end",
          "marginLeft": "auto",
          "marginTop": -6,
        }
      }
    >
      <Text
        style={
          [
            {
              "color": "white",
              "fontFamily": "MulishSemiBold",
            },
            {
              "color": "#1B1D4D",
              "fontSize": 16,
            },
          ]
        }
      >
        8
        %
      </Text>
      <Text
        style={
          [
            {
              "color": "white",
              "fontFamily": "MulishSemiBold",
            },
            {
              "color": "#3EB290",
              "fontSize": 12,
            },
          ]
        }
      >
        + 
        60,57
      </Text>
    </View>
  </View>
  <View
    style={
      {
        "flexDirection": "row",
        "gap": 8,
        "justifyContent": "space-between",
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={false}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "opacity": 1,
          "width": "50%",
        }
      }
    >
      <ViewManagerAdapter_ExpoLinearGradient
        proxiedProperties={
          {
            "colors": [
              4283804910,
              4283804910,
            ],
            "endPoint": [
              1,
              0.5,
            ],
            "locations": undefined,
            "startPoint": [
              0,
              0.5,
            ],
          }
        }
        style={
          [
            {
              "borderRadius": 10,
              "padding": 15,
            },
            {
              "padding": 8,
            },
            false,
          ]
        }
      >
        <Text
          style={
            [
              {
                "fontFamily": "MulishSemiBold",
                "fontSize": 16,
                "textAlign": "center",
              },
              false,
              false,
              [
                {
                  "fontSize": 12,
                },
                {
                  "color": "white",
                  "fontFamily": "MulishSemiBold",
                },
              ],
            ]
          }
        >
          Top - Up
        </Text>
      </ViewManagerAdapter_ExpoLinearGradient>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={false}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "opacity": 1,
          "width": "50%",
        }
      }
    >
      <ViewManagerAdapter_ExpoLinearGradient
        proxiedProperties={
          {
            "colors": [
              4282299024,
              4282299024,
            ],
            "endPoint": [
              1,
              0.5,
            ],
            "locations": undefined,
            "startPoint": [
              0,
              0.5,
            ],
          }
        }
        style={
          [
            {
              "borderRadius": 10,
              "padding": 15,
            },
            {
              "padding": 8,
            },
            false,
          ]
        }
      >
        <Text
          style={
            [
              {
                "fontFamily": "MulishSemiBold",
                "fontSize": 16,
                "textAlign": "center",
              },
              false,
              false,
              [
                {
                  "fontSize": 12,
                },
                {
                  "color": "white",
                  "fontFamily": "MulishSemiBold",
                },
              ],
            ]
          }
        >
          Withdrawal
        </Text>
      </ViewManagerAdapter_ExpoLinearGradient>
    </View>
  </View>
</View>
`;

exports[`DepositBox should render first date with year when the year is not the same 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "white",
        "borderRadius": 10,
        "height": "auto",
        "padding": 10,
        "width": "100%",
      },
      {
        "elevation": 20,
        "shadowColor": "#161966",
        "shadowOffset": {
          "height": 6,
          "width": 0,
        },
        "shadowOpacity": 0.08,
        "shadowRadius": 16,
      },
      {
        "gap": 14,
        "padding": 21,
      },
    ]
  }
  testID="universal-container"
>
  <View
    style={
      {
        "alignItems": "flex-start",
        "flexDirection": "row",
        "gap": 7,
        "justifyContent": "flex-start",
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "#3EB290",
            "borderRadius": 44,
            "height": 22,
            "justifyContent": "center",
            "width": 22,
          },
          false,
        ]
      }
    >
      <SvgMock />
    </View>
    <View
      style={
        {
          "alignContent": "flex-start",
          "justifyContent": "flex-start",
          "marginTop": -6,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "flex-end",
            "flexDirection": "row",
          }
        }
      >
        <Text
          style={
            [
              {
                "color": "white",
                "fontFamily": "MulishRegular",
              },
              {
                "color": "#1B1D4D",
                "fontSize": 20,
              },
            ]
          }
        >
          3000
          .
        </Text>
        <View
          style={
            {
              "alignItems": "flex-end",
              "flexDirection": "row",
              "paddingBottom": 2,
            }
          }
        >
          <Text
            style={
              [
                {
                  "color": "white",
                  "fontFamily": "MulishRegular",
                },
                {
                  "color": "#1B1D4D",
                  "fontSize": 14,
                },
              ]
            }
          >
            00
          </Text>
          <Text
            style={
              [
                {
                  "color": "white",
                  "fontFamily": "MulishBold",
                },
                {
                  "color": "#1B1D4D",
                  "fontSize": 14,
                  "marginLeft": 4,
                },
              ]
            }
          >
            USD
          </Text>
        </View>
      </View>
      <Text
        style={
          [
            {
              "color": "white",
              "fontFamily": "MulishRegular",
            },
            {
              "color": "#4C4C60",
              "fontSize": 12,
            },
          ]
        }
      >
        1 wrz 2022
         - 
        1 paź 2023
      </Text>
    </View>
    <View
      style={
        {
          "alignItems": "flex-end",
          "marginLeft": "auto",
          "marginTop": -6,
        }
      }
    >
      <Text
        style={
          [
            {
              "color": "white",
              "fontFamily": "MulishSemiBold",
            },
            {
              "color": "#1B1D4D",
              "fontSize": 16,
            },
          ]
        }
      >
        8
        %
      </Text>
      <Text
        style={
          [
            {
              "color": "white",
              "fontFamily": "MulishSemiBold",
            },
            {
              "color": "#3EB290",
              "fontSize": 12,
            },
          ]
        }
      >
        + 
        60,57
      </Text>
    </View>
  </View>
  <View
    style={
      {
        "flexDirection": "row",
        "gap": 8,
        "justifyContent": "space-between",
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={false}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "opacity": 1,
          "width": "50%",
        }
      }
    >
      <ViewManagerAdapter_ExpoLinearGradient
        proxiedProperties={
          {
            "colors": [
              4294937201,
              4294937201,
            ],
            "endPoint": [
              1,
              0.5,
            ],
            "locations": undefined,
            "startPoint": [
              0,
              0.5,
            ],
          }
        }
        style={
          [
            {
              "borderRadius": 10,
              "padding": 15,
            },
            {
              "padding": 8,
            },
            false,
          ]
        }
      >
        <Text
          style={
            [
              {
                "fontFamily": "MulishSemiBold",
                "fontSize": 16,
                "textAlign": "center",
              },
              false,
              false,
              [
                {
                  "fontSize": 12,
                },
                {
                  "color": "white",
                  "fontFamily": "MulishSemiBold",
                },
              ],
            ]
          }
        >
          Extend
        </Text>
      </ViewManagerAdapter_ExpoLinearGradient>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={false}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "opacity": 1,
          "width": "50%",
        }
      }
    >
      <ViewManagerAdapter_ExpoLinearGradient
        proxiedProperties={
          {
            "colors": [
              4282299024,
              4282299024,
            ],
            "endPoint": [
              1,
              0.5,
            ],
            "locations": undefined,
            "startPoint": [
              0,
              0.5,
            ],
          }
        }
        style={
          [
            {
              "borderRadius": 10,
              "padding": 15,
            },
            {
              "padding": 8,
            },
            false,
          ]
        }
      >
        <Text
          style={
            [
              {
                "fontFamily": "MulishSemiBold",
                "fontSize": 16,
                "textAlign": "center",
              },
              false,
              false,
              [
                {
                  "fontSize": 12,
                },
                {
                  "color": "white",
                  "fontFamily": "MulishSemiBold",
                },
              ],
            ]
          }
        >
          Withdrawal
        </Text>
      </ViewManagerAdapter_ExpoLinearGradient>
    </View>
  </View>
</View>
`;

exports[`DepositBox should render first date without year when the year is the same 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "white",
        "borderRadius": 10,
        "height": "auto",
        "padding": 10,
        "width": "100%",
      },
      {
        "elevation": 20,
        "shadowColor": "#161966",
        "shadowOffset": {
          "height": 6,
          "width": 0,
        },
        "shadowOpacity": 0.08,
        "shadowRadius": 16,
      },
      {
        "gap": 14,
        "padding": 21,
      },
    ]
  }
  testID="universal-container"
>
  <View
    style={
      {
        "alignItems": "flex-start",
        "flexDirection": "row",
        "gap": 7,
        "justifyContent": "flex-start",
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "#3EB290",
            "borderRadius": 44,
            "height": 22,
            "justifyContent": "center",
            "width": 22,
          },
          false,
        ]
      }
    >
      <SvgMock />
    </View>
    <View
      style={
        {
          "alignContent": "flex-start",
          "justifyContent": "flex-start",
          "marginTop": -6,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "flex-end",
            "flexDirection": "row",
          }
        }
      >
        <Text
          style={
            [
              {
                "color": "white",
                "fontFamily": "MulishRegular",
              },
              {
                "color": "#1B1D4D",
                "fontSize": 20,
              },
            ]
          }
        >
          3000
          .
        </Text>
        <View
          style={
            {
              "alignItems": "flex-end",
              "flexDirection": "row",
              "paddingBottom": 2,
            }
          }
        >
          <Text
            style={
              [
                {
                  "color": "white",
                  "fontFamily": "MulishRegular",
                },
                {
                  "color": "#1B1D4D",
                  "fontSize": 14,
                },
              ]
            }
          >
            00
          </Text>
          <Text
            style={
              [
                {
                  "color": "white",
                  "fontFamily": "MulishBold",
                },
                {
                  "color": "#1B1D4D",
                  "fontSize": 14,
                  "marginLeft": 4,
                },
              ]
            }
          >
            USD
          </Text>
        </View>
      </View>
      <Text
        style={
          [
            {
              "color": "white",
              "fontFamily": "MulishRegular",
            },
            {
              "color": "#4C4C60",
              "fontSize": 12,
            },
          ]
        }
      >
        1 wrz
         - 
        1 paź 2022
      </Text>
    </View>
    <View
      style={
        {
          "alignItems": "flex-end",
          "marginLeft": "auto",
          "marginTop": -6,
        }
      }
    >
      <Text
        style={
          [
            {
              "color": "white",
              "fontFamily": "MulishSemiBold",
            },
            {
              "color": "#1B1D4D",
              "fontSize": 16,
            },
          ]
        }
      >
        8
        %
      </Text>
      <Text
        style={
          [
            {
              "color": "white",
              "fontFamily": "MulishSemiBold",
            },
            {
              "color": "#3EB290",
              "fontSize": 12,
            },
          ]
        }
      >
        + 
        60,57
      </Text>
    </View>
  </View>
  <View
    style={
      {
        "flexDirection": "row",
        "gap": 8,
        "justifyContent": "space-between",
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={false}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "opacity": 1,
          "width": "50%",
        }
      }
    >
      <ViewManagerAdapter_ExpoLinearGradient
        proxiedProperties={
          {
            "colors": [
              4294937201,
              4294937201,
            ],
            "endPoint": [
              1,
              0.5,
            ],
            "locations": undefined,
            "startPoint": [
              0,
              0.5,
            ],
          }
        }
        style={
          [
            {
              "borderRadius": 10,
              "padding": 15,
            },
            {
              "padding": 8,
            },
            false,
          ]
        }
      >
        <Text
          style={
            [
              {
                "fontFamily": "MulishSemiBold",
                "fontSize": 16,
                "textAlign": "center",
              },
              false,
              false,
              [
                {
                  "fontSize": 12,
                },
                {
                  "color": "white",
                  "fontFamily": "MulishSemiBold",
                },
              ],
            ]
          }
        >
          Extend
        </Text>
      </ViewManagerAdapter_ExpoLinearGradient>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={false}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "opacity": 1,
          "width": "50%",
        }
      }
    >
      <ViewManagerAdapter_ExpoLinearGradient
        proxiedProperties={
          {
            "colors": [
              4282299024,
              4282299024,
            ],
            "endPoint": [
              1,
              0.5,
            ],
            "locations": undefined,
            "startPoint": [
              0,
              0.5,
            ],
          }
        }
        style={
          [
            {
              "borderRadius": 10,
              "padding": 15,
            },
            {
              "padding": 8,
            },
            false,
          ]
        }
      >
        <Text
          style={
            [
              {
                "fontFamily": "MulishSemiBold",
                "fontSize": 16,
                "textAlign": "center",
              },
              false,
              false,
              [
                {
                  "fontSize": 12,
                },
                {
                  "color": "white",
                  "fontFamily": "MulishSemiBold",
                },
              ],
            ]
          }
        >
          Withdrawal
        </Text>
      </ViewManagerAdapter_ExpoLinearGradient>
    </View>
  </View>
</View>
`;

exports[`DepositBox should render green checkmark icon and orange button when finished 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "white",
        "borderRadius": 10,
        "height": "auto",
        "padding": 10,
        "width": "100%",
      },
      {
        "elevation": 20,
        "shadowColor": "#161966",
        "shadowOffset": {
          "height": 6,
          "width": 0,
        },
        "shadowOpacity": 0.08,
        "shadowRadius": 16,
      },
      {
        "gap": 14,
        "padding": 21,
      },
    ]
  }
  testID="universal-container"
>
  <View
    style={
      {
        "alignItems": "flex-start",
        "flexDirection": "row",
        "gap": 7,
        "justifyContent": "flex-start",
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "#3EB290",
            "borderRadius": 44,
            "height": 22,
            "justifyContent": "center",
            "width": 22,
          },
          false,
        ]
      }
    >
      <SvgMock />
    </View>
    <View
      style={
        {
          "alignContent": "flex-start",
          "justifyContent": "flex-start",
          "marginTop": -6,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "flex-end",
            "flexDirection": "row",
          }
        }
      >
        <Text
          style={
            [
              {
                "color": "white",
                "fontFamily": "MulishRegular",
              },
              {
                "color": "#1B1D4D",
                "fontSize": 20,
              },
            ]
          }
        >
          3000
          .
        </Text>
        <View
          style={
            {
              "alignItems": "flex-end",
              "flexDirection": "row",
              "paddingBottom": 2,
            }
          }
        >
          <Text
            style={
              [
                {
                  "color": "white",
                  "fontFamily": "MulishRegular",
                },
                {
                  "color": "#1B1D4D",
                  "fontSize": 14,
                },
              ]
            }
          >
            00
          </Text>
          <Text
            style={
              [
                {
                  "color": "white",
                  "fontFamily": "MulishBold",
                },
                {
                  "color": "#1B1D4D",
                  "fontSize": 14,
                  "marginLeft": 4,
                },
              ]
            }
          >
            USD
          </Text>
        </View>
      </View>
      <Text
        style={
          [
            {
              "color": "white",
              "fontFamily": "MulishRegular",
            },
            {
              "color": "#4C4C60",
              "fontSize": 12,
            },
          ]
        }
      >
        1 wrz
         - 
        1 paź 2022
      </Text>
    </View>
    <View
      style={
        {
          "alignItems": "flex-end",
          "marginLeft": "auto",
          "marginTop": -6,
        }
      }
    >
      <Text
        style={
          [
            {
              "color": "white",
              "fontFamily": "MulishSemiBold",
            },
            {
              "color": "#1B1D4D",
              "fontSize": 16,
            },
          ]
        }
      >
        8
        %
      </Text>
      <Text
        style={
          [
            {
              "color": "white",
              "fontFamily": "MulishSemiBold",
            },
            {
              "color": "#3EB290",
              "fontSize": 12,
            },
          ]
        }
      >
        + 
        60,57
      </Text>
    </View>
  </View>
  <View
    style={
      {
        "flexDirection": "row",
        "gap": 8,
        "justifyContent": "space-between",
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={false}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "opacity": 1,
          "width": "50%",
        }
      }
    >
      <ViewManagerAdapter_ExpoLinearGradient
        proxiedProperties={
          {
            "colors": [
              4294937201,
              4294937201,
            ],
            "endPoint": [
              1,
              0.5,
            ],
            "locations": undefined,
            "startPoint": [
              0,
              0.5,
            ],
          }
        }
        style={
          [
            {
              "borderRadius": 10,
              "padding": 15,
            },
            {
              "padding": 8,
            },
            false,
          ]
        }
      >
        <Text
          style={
            [
              {
                "fontFamily": "MulishSemiBold",
                "fontSize": 16,
                "textAlign": "center",
              },
              false,
              false,
              [
                {
                  "fontSize": 12,
                },
                {
                  "color": "white",
                  "fontFamily": "MulishSemiBold",
                },
              ],
            ]
          }
        >
          Extend
        </Text>
      </ViewManagerAdapter_ExpoLinearGradient>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={false}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "opacity": 1,
          "width": "50%",
        }
      }
    >
      <ViewManagerAdapter_ExpoLinearGradient
        proxiedProperties={
          {
            "colors": [
              4282299024,
              4282299024,
            ],
            "endPoint": [
              1,
              0.5,
            ],
            "locations": undefined,
            "startPoint": [
              0,
              0.5,
            ],
          }
        }
        style={
          [
            {
              "borderRadius": 10,
              "padding": 15,
            },
            {
              "padding": 8,
            },
            false,
          ]
        }
      >
        <Text
          style={
            [
              {
                "fontFamily": "MulishSemiBold",
                "fontSize": 16,
                "textAlign": "center",
              },
              false,
              false,
              [
                {
                  "fontSize": 12,
                },
                {
                  "color": "white",
                  "fontFamily": "MulishSemiBold",
                },
              ],
            ]
          }
        >
          Withdrawal
        </Text>
      </ViewManagerAdapter_ExpoLinearGradient>
    </View>
  </View>
</View>
`;
